# cifmt

./: .clippy.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  cliff.toml  justfile  prek.toml
crates/cifmt/: Cargo.toml
crates/cifmt-cli/: Cargo.toml  build.rs
crates/cifmt-cli/src/: commands.rs  logging.rs  main.rs  version.rs
crates/cifmt-cli/src/commands/: format.rs  version.rs
crates/cifmt-cli/tests/cli/: format.rs  main.rs  version.rs
crates/cifmt-cli/tests/cli/format/: cargo_check.rs  cargo_libtest.rs
crates/cifmt-cli/tests/cli/format/snapshots/: cli__format__cargo_check__format_detect.snap  cli__format__cargo_check__format_no_tool_specified.snap  cli__format__cargo_check__format_platform@platform_name=github##github_actions_env.is_some()=true.snap  cli__format__cargo_libtest__format_manual.snap  cli__format__cargo_libtest__format_platform@platform_name=github##github_actions_env.is_some()=true.snap
crates/cifmt-cli/tests/cli/snapshots/: cli__version__version.snap  cli__version__version@output_format=json##verbosity=0.snap  cli__version__version@output_format=json##verbosity=1.snap  cli__version__version@output_format=json##verbosity=2.snap  cli__version__version@output_format=text##verbosity=0.snap  cli__version__version@output_format=text##verbosity=2.snap
crates/cifmt-cli/tests/cli/test_data/: README.md  cargo-check.in  cargo-libtest.in  generate
crates/cifmt/src/: ci.rs  ci_message.rs  lib.rs  message.rs  tool.rs
crates/cifmt/src/ci/: github.rs  plain.rs
crates/cifmt/src/tool/: cargo_check.rs  cargo_libtest.rs  cargo_test.rs
crates/cifmt/src/tool/cargo_check/: build_finished.rs  build_script_executed.rs  cargo_message.rs  common.rs  compiler_artifact.rs  compiler_message.rs  diagnostic.rs  rustc_message.rs
crates/cifmt/src/tool/cargo_check/compiler_message/: rustc_message.rs
crates/cifmt/src/tool/cargo_check/compiler_message/rustc_message/: artifact.rs  diagnostic.rs  future_incompat.rs  section_timing.rs  unused_externs.rs
crates/cifmt/src/tool/cargo_libtest/: bench_message.rs  report_message.rs  suite_message.rs  test_message.rs
crates/cifmt/src/tool/snapshots/: cifmt__tool__cargo_check__tests__format_github@build_finished_failure.snap  cifmt__tool__cargo_check__tests__format_github@build_finished_success.snap  cifmt__tool__cargo_check__tests__format_github@build_script_executed.snap  cifmt__tool__cargo_check__tests__format_github@build_script_executed_minimal.snap  cifmt__tool__cargo_check__tests__format_github@compiler_artifact_built_target_bin_profile_release.snap  cifmt__tool__cargo_check__tests__format_github@compiler_artifact_built_target_lib_profile_debug.snap  cifmt__tool__cargo_check__tests__format_github@compiler_artifact_fresh_target_bin_profile_release.snap  cifmt__tool__cargo_check__tests__format_github@compiler_artifact_fresh_target_lib_profile_debug.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_bin_artifact_dep_info.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_bin_section_timing_end.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_bin_unused_externs_warn.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_artifact_link.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_artifact_metadata.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_error_with_code.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_future_incompat_with_warning_error_with_code.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_future_incompat_with_warning_warning_without_code.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_section_timing_start.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_unused_externs_deny.snap  cifmt__tool__cargo_check__tests__format_github@compiler_message_target_lib_warning_without_code.snap  cifmt__tool__cargo_check__tests__format_plain@build_finished_failure.snap  cifmt__tool__cargo_check__tests__format_plain@build_finished_success.snap  cifmt__tool__cargo_check__tests__format_plain@build_script_executed.snap  cifmt__tool__cargo_check__tests__format_plain@build_script_executed_minimal.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_artifact_built_target_bin_profile_debug.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_artifact_built_target_lib_profile_debug.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_artifact_fresh_target_bin_profile_release.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_artifact_fresh_target_lib_profile_release.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_artifact_metadata.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_error_with_code.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_future_incompat_with_warning_warning_without_code.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_section_timing_end.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_section_timing_start.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_unused_externs_empty.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_unused_externs_warn.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_bin_warning_without_code.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_lib_artifact_dep_info.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_lib_artifact_link.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_lib_future_incompat_with_warning_error_with_code.snap  cifmt__tool__cargo_check__tests__format_plain@compiler_message_target_lib_unused_externs_deny.snap  cifmt__tool__cargo_libtest__tests__format_github@bench.snap  (+50 more)
(+7 files in other folders)
