#:schema https://www.schemastore.org/cargo.json
[workspace]
resolver = "3"

members = ["crates/*"]

  [workspace.package]
  license    = "MIT"
  readme     = "README.md"
  repository = "https://github.com/JP-Ellis/cifmt"

  [workspace.dependencies]
  bon        = "3.0"
  serde      = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  tracing    = "0.1"

  # Dev dependencies, pinned to ensure reproducibility
  pretty_assertions = "=1.4.1"
  rstest            = "=0.26.1"

  ##############################################################################
  ## Lints
  ##############################################################################
  [workspace.lints.rust]
  future-incompatible = "warn"
  warnings            = "warn"

  missing_docs = "warn"

  [workspace.lints.clippy]
  # Lower the priority of groups to allow overriding individual lints
  cargo       = { level = "warn", priority = -1 }
  complexity  = { level = "warn", priority = -1 }
  correctness = { level = "warn", priority = -1 }
  pedantic    = { level = "warn", priority = -1 }
  perf        = { level = "warn", priority = -1 }
  restriction = { level = "warn", priority = -1 }
  style       = { level = "warn", priority = -1 }
  suspicious  = { level = "warn", priority = -1 }

  ########################################
  # Restriction Lints
  ########################################
  # The restriction group contains lints which Clippy deems as opt-in. I prefer
  # using an opt-out approach.
  blanket-clippy-restriction-lints = "allow"

  arbitrary_source_item_ordering = "allow"
  else_if_without_else           = "allow"
  impl_trait_in_params           = "allow"
  implicit_return                = "allow"
  min_ident_chars                = "allow"
  missing_trait_methods          = "allow"
  pattern_type_mismatch          = "allow"
  pub_with_shorthand             = "allow"
  question_mark_used             = "allow"
  ref_patterns                   = "allow"
  self_named_module_files        = "allow"
  separated_literal_suffix       = "allow"
  single_call_fn                 = "allow"
  single_char_lifetime_names     = "allow"
  std_instead_of_alloc           = "allow"
  std_instead_of_core            = "allow"
  string_add                     = "allow"
  unreachable                    = "allow"
  unused_trait_names             = "allow"

  # TODO: Revisit this once https://github.com/rust-lang/rust-clippy/issues/14056
  # is resolved.
  panic_in_result_fn = "allow"

  # TODO: Revisit once Clippy treats all targets equally.
  # Currently, clippy behaves differently when checking with `--all-targets` vs
  # just the library target.
  cognitive_complexity = "allow"

  [workspace.lints.rustdoc]
  missing-crate-level-docs = "warn"
