#:schema https://www.schemastore.org/cargo.json
[package]
description = "CI message formatter"
name        = "cifmt-cli"
version     = "1.0.0"

authors = ["JP-Ellis <josh@jpellis.me>"]

edition = "2024"

license    = { workspace = true }
readme     = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "cifmt"
path = "src/main.rs"

[dependencies]
clap               = { version = "4.5", features = ["derive", "string"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_fs         = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
regex             = { workspace = true }
rstest            = { workspace = true }
