#:schema https://www.schemastore.org/cargo.json

[package]
name        = "cifmt-cli"
version     = "1.0.0"
description = "CI message formatter"
readme      = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = ["ci", "formatter"]
categories  = ["development-tools::continuous-integration"]

edition = "2024"

[[bin]]
name = "cifmt"
path = "src/main.rs"

[dependencies]
anyhow             = "1.0"
cifmt              = { path = "../cifmt" }
clap               = { version = "4.5", features = ["derive", "string"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_fs         = { workspace = true }
insta             = { workspace = true }
pretty_assertions = { workspace = true }
regex             = { workspace = true }
rstest            = { workspace = true }

[lints]
workspace = true
