#:schema https://www.schemastore.org/cargo.json
[package]
description = "CI message formatter"
name        = "cifmt"
version     = "1.0.0"

authors = ["JP-Ellis <josh@jpellis.me>"]

edition = "2024"

license    = { workspace = true }
readme     = { workspace = true }
repository = { workspace = true }

[dependencies]
bon        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
insta             = "=1.43.2"
pretty_assertions = { workspace = true }
rstest            = { workspace = true }
