#:schema https://www.schemastore.org/cargo.json

[package]
name        = "cifmt"
version     = "1.0.0"
description = "CI message formatter"
readme      = { workspace = true }
repository  = { workspace = true }
license     = { workspace = true }
keywords    = ["ci", "formatter"]
categories  = ["development-tools::continuous-integration"]

edition = "2024"

[dependencies]
bon        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
insta             = { workspace = true }
pretty_assertions = { workspace = true }
rstest            = { workspace = true }

[lints]
workspace = true
